# M9A

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc  .prettierrc.mjs  AGENTS.md  CONTRIBUTING.md  README.en.md  README.md  README_en.md  interface.json  maa-project.json  maa-project.lock.json  maatools.config.mts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.in  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  cliff.toml  dependabot.yml
agent/: __init__.py  agent_runtime.py  bootstrap.py  main.py
assets/: interface.json  interface_cli.json
docs/: .markdownlint.yaml  README.md
tasks/: 8bit.json  Awards.json  BalancedFarming.json  Bank.json  Close1999.json  Colosseum.json  Combat.json  CombatActivity.json  CompleteInduction.json  CritterCrash.json  Limbo.json  Lucidscape.json  PreStormProtocol.json  Psychube.json  RedeemCode.json  SSReopen.json  SeriesOfDusks.json  StartUp.json  SwitchAccount.json  SwitchFramework.json  TheAlarm.json  TheSyndromeOfSilence.json  UTTU.json  Wilderness.json
tests/: test_agent_module_imports.py  test_agent_runtime.py  test_aspect_ratio.py  test_bootstrap.py  test_custom_registration.py  test_download_drop_core.py  test_http_session.py  test_maa_types.py  test_manifest_checker.py  test_release_builder.py  test_release_workflow.py  test_resource_updater.py  test_runtime_paths.py  test_schema_validator.py
tools/: build-release.mjs  check-project.mjs  configure.py  minify_json.py  optimize-images.mjs  sync-runtime.mjs  sync-schema.mjs  (+1 more)
(+288 files in other folders)
