[project]
name = "m9a"
version = "0.1.0"
description = "M9A MaaFW Agent project"
requires-python = ">=3.13,<3.14"
dependencies = [
    "maafw==5.11.1",
    "loguru",
    "pillow>=10.0",
    "pytz",
    "requests",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.0",
    "ruff>=0.11.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["agent", "tools"]
extraPaths = ["agent"]
pythonVersion = "3.13"
typeCheckingMode = "strict"

# MaaFramework 的 Python 包 (MaaFw) 不发布 PEP 561 类型存根；strict 模式下 Unknown 类型会从 maa 调用向外传播，这里统一抑制。
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
# MaaFW 的 AgentServer.custom_action / custom_recognition 装饰器签名返回 type[CustomAction]/type[CustomRecognition]，
# 不保留子类类型，导致子类类属性访问被 pyright 误报。整个 codebase 都有此问题，统一抑制。
reportAttributeAccessIssue = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "agent"]
